# pulseguard

./: .easignore  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/backend/: .dockerignore  Dockerfile  main.py  package.json  pyproject.toml
apps/backend/agent/: knowledge.txt  state.py  tools.py  workflow.py
apps/backend/prisma/: schema.prisma
apps/backend/routers/: embedded.py
apps/backend/services/: blockchain.py  mpesa.py  parametric.py  rag.py  vision.py  webhook.py
apps/backend/tests/: test_api.py
apps/backend/utils/: privacy.py  telemetry.py
apps/mobile/: .easignore  app.json  babel.config.js  eas.json  package.json  tamagui.config.ts
apps/mobile/app/: _layout.tsx  ai-advisor.tsx  claim.tsx  index.tsx  login.tsx
apps/mobile/src/: i18n.ts
apps/mobile/src/db/: index.ts
apps/mobile/src/locales/: en.json  sw.json
apps/mobile/src/services/: auth.ts  sync.ts  telematics.ts
apps/ussd/: index.ts  package.json  tsconfig.json
apps/web/: next.config.ts  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts
apps/web/src/: instrumentation-client.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/claims/: page.tsx
apps/web/src/app/embed/: layout.tsx  page.tsx
apps/web/src/app/partner/: page.tsx
apps/web/src/app/sentry-example-page/: page.tsx
apps/web/src/components/: analytics-chart.tsx  audit-timeline.tsx  fraud-alerts.tsx  policies-table.tsx
