[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "llama-index>=0.14.19",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-openai-like>=0.7.2",
    "llama-index-vector-stores-postgres>=0.8.1",
    "openai>=2.29.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-instrumentation-httpx>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "pgvector>=0.4.2",
    "prisma>=0.15.0",
    "psycopg-pool>=3.3.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "roboflow>=1.2.16",
    "slowapi>=0.1.9",
    "uvicorn>=0.42.0",
    "web3>=7.14.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
